--- a/code/src/index.css
+++ b/code/src/index.css
@@ -37,6 +37,7 @@ code {
   padding: 20px 20px;
   border: 2px solid black;
   font-family: 'Cutive Mono', monospace;
+  overflow-wrap: break-word;
 }
 
 /*** THE MY-THOGHT-CARD ***/
