--- a/code/src/components/design/messageform.css
+++ b/code/src/components/design/messageform.css
@@ -1,12 +1,17 @@
 
 .messageSubmitbox {
     width: 400px;
-    height: 130px;
+    height: 150px;
     background-color: rgba(235, 227, 227, 0.468);
     border: 1px solid black;
     padding: 10px;
     box-shadow: 7px 7px;
     margin: 30px;
+}
+
+textarea {
+    width: 380px;
+    height: 40px;
 }
 
 .messageSubmitbutton {
