--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -49,7 +49,6 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
 
   margin-top: 2.5rem;
   padding: .5rem 1rem 1rem;
@@ -101,6 +100,7 @@ textarea {
 }
 
 .char-count {
+  margin-bottom: .4rem;
   text-align: right;
   font-size: .75rem;
   color: $color-darkGray;
@@ -126,7 +126,9 @@ button:disabled {
 /* –– Thought card –– */
 
 .thought-card {
+  align-items: baseline;
   overflow-wrap: break-word;
+
   h2 {
     flex-basis: 100%;
     width: 100%;
@@ -142,15 +144,15 @@ button:disabled {
 }
 
 .like-btn {
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 3.5rem;
+  height: 3.5rem;
   margin-right: 1rem;
-  padding-left: .7rem;
-  padding-top: .2rem;
-  font-size: 1.2rem;
+  padding-top: .5rem;
+  font-size: 1.6rem;
   background-color: $color-lightGray;
   border: 0;
   border-radius: 50%;
+  transform: scale(.8); // Fix to make the emoji centered in Chrome (increase font-size & reduce total size)
 }
 
 .has-likes {
