--- a/code/src/PostThoughts.css
+++ b/code/src/PostThoughts.css
@@ -4,5 +4,41 @@
   padding: 20px;
   background: #f5f5f1;
   border: 1px solid black;
-  box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+  box-shadow: 10px 10px 0px 0px black;
+}
+
+.form-text {
+  height: 50px;
+  width: 300px;
+  border: 1px solid grey;
+  font-size: 14px;
+  font-family: inherit;
+}
+
+.send-button {
+  background: #ffaaaa;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  border: 1px solid #f5f5f1;
+}
+
+.send-button:hover {
+  background: white;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+
+@media (min-width: 669px) {
+
+  .post-thoughts {
+    width: 500px;
+  }
+
+  .form-text {
+    height: 80px;
+    width: 450px;
+  }
 }
