--- a/code/src/LikeHeart.css
+++ b/code/src/LikeHeart.css
@@ -1,19 +1,15 @@
 .like-heart {
-  background: lightgray;
+  background: #ffaaaa;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   margin-right: 4px;
   font-size: 16px;
-  border: 1px solid #f5f5f1;  
+  border: 1px solid #ffaaaa;  
 }
 
 .like-heart:hover {     
   background: white;
   cursor: pointer;
   border: 1px solid black;
-}
-
-.like-heart div {
-  margin-left: 5px;
 }
