--- a/code/src/Components/newthoughtform.css
+++ b/code/src/Components/newthoughtform.css
@@ -1,24 +1,49 @@
 form {
+  font-family: 'Courier', monospace;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color:lightgray;
-  border: solid 1px black;
+  border: solid 2px darkgray;
+  box-shadow: 4px 4px black;
   width: 350px;
   height: auto;
   padding: 5px;
+  margin: 16px;
 }
 
-button {
+h3 {
+  font-size: 16px;
+  margin: 10px;
+}
+
+textarea {
+  width: 100%;
+  border: solid 2px darkgray;
+  margin: 0px;
+  resize: none;
+  padding: 10px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.submit-thought {
+  height: 35px;
+  width: 60%;
+  background-color: #ffadad;
+  border: 1px solid palevioletred;
+  font-size: 14px;
+  border-radius: 25px;
   padding: 5px;
+  margin: 5px 5px 10px 5px;
 }
 
-input {
-width: 90%;
-height: 18px;
-border: solid 1px black;
-margin: 5px;
+.submit-thought:hover {
+  cursor: pointer;
+  background-color: palevioletred;
 }
+
+
 
 
