--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif, 'Pacifico', cursive, "Spicy Rice", cursive;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 600;
@@ -10,6 +11,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  background-color: rgb(252, 221, 224);
 }
 
 code {
@@ -18,39 +20,44 @@ code {
 }
 
 .allThoughts {
-  width: 400px;
+  font-family: Spicy Rice;
+  font-size: 45px;
+  color: white;
+  padding-top: 20px;
+  width: 350px;
   display: flex;
   flex-direction: column;
+  padding-right: 4px;
 }
 
 .newThoughtCard {
-  max-width: 400px;
-  height: 150px;
+  color: black;
+  max-width: 350px;
+  height: 160px;
   background-color: rgb(227, 224, 224);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 50px;
+  margin-top: 10px;
   border: 1px solid black;
-  box-shadow: 6px 7px black;
+  box-shadow: 4px 4px black;
   padding-left: 15px;
   font-family: 'arial', "Courier New";
-  font-weight: 400;
-  font-size: 13px;
+  font-weight: 600;
   padding-top: 5px;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .textinput {
-  margin-bottom: 9px;
+  margin-bottom: 12px;
   width: 95%;
-  height: 52px;
-  padding: 8px 10px;
+  height: 58px;
+  padding: 8px 1px;
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
   resize: none;
-  font-family: "Inconsolata";
+  font-family: "Inconsolata", "Courier New";
   font-size: 12px;
   font-weight: 600;
 }
@@ -69,28 +76,37 @@ code {
   font-family: 'Inconsolata', "Courier New";
   font-weight: 700;
   padding-top: 5px;
+  padding-right: 12px;
+  padding-left: 12px;
 }
 
-.newThoughtLength {}
+.newThoughtLength {
+  color: grey;
+}
 
 .thoughtsCard {
-  max-width: 400px;
-  height: 100px;
+  max-width: 350px;
+  height: 110px;
   background-color: fff;
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  margin-top: 30px;
-  font-family: 'Inconsolata', "monospace";
+  justify-content: space-between;
+  margin-top: 20px;
+  font-family: 'Inconsolata', "Courier New";
   border: 1px solid black;
-  box-shadow: 6px 7px black;
+  box-shadow: 4px 4px black;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 18px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  background-color: white;
 }
 
 .thought {
-  margin-bottom: 45px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: black;
 }
 
 .heartSection {
@@ -98,8 +114,22 @@ code {
   justify-content: space-between;
   font-size: 12px;
   color: grey;
+  align-items: center;
+}
+
+.heartSection button {
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-right: 4px;
 }
 
 .likeButton {
   cursor: pointer;
+  background: pink;
+}
+
+.notLiked {
+  background: lightgrey;
 }
