--- a/code/src/components/thoughts_style.css
+++ b/code/src/components/thoughts_style.css
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .thought-card {
   border: 1px solid #000;
   box-shadow: 6px 8px #000;
@@ -15,30 +14,25 @@
   margin: 20px 0;
   padding: 15px;
   width: 50%;
-  max-width: 400px;
+  max-width: 300px;
   height: 100%;
   background-color: rgb(255, 255, 255);
-
 }
-
-
 .message-id {
   color: grey;
   font-size: 12px;
   padding-bottom: 10px;
 }
-
 .message-text {
   font-weight: 700;
   padding-top: 5px;
+  overflow: hidden;
 }
-
 .message-time {
   color: grey;
   text-align: right;
   font-size: 11px;
 }
-
 .message-likes {
   padding-top: 20px;
   color: grey;
