--- a/code/src/components/messageInput.css
+++ b/code/src/components/messageInput.css
@@ -1,3 +1,13 @@
+.input-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .message-card {
-  background-color: blue;
+  border: 1px solid black;
+  width: 40%;
+  box-shadow: 2px 2px;
+  padding: 10px;
+  margin: 20px;
 }
