--- a/code/src/components/messageList.css
+++ b/code/src/components/messageList.css
@@ -1,3 +1,13 @@
+.messages-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .messages {
-  background-color: yellow;
+  border: 1px solid black;
+  width: 40%;
+  box-shadow: 2px 2px;
+  padding: 10px;
+  margin: 20px;
 }
