--- a/code/src/components/ThoughtsList.css
+++ b/code/src/components/ThoughtsList.css
@@ -1,7 +1,40 @@
 .message-card {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
   margin: 30px;
-  padding: 15px;
+  padding: 10px;
   background-color: #fff;
   border: 1px solid black;
   box-shadow: 6px 6px #000;
+  box-sizing: border-box;
+  /* overflow, fits the text in card */
+  overflow-wrap: break-word;
+}
+
+.hearts {
+  font-family: "Courier New", Courier, monospace;
+  margin: 8px 0;
+  font-size: 12px;
+  color: #6e6e6e;
+}
+.like-button {
+  margin: 10px 10px 0 0;
+  background-color: #f2f0f0;
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 50%;
+  transform: scale();
+  box-sizing: border-box;
+}
+
+.message-time {
+  font-family: "Courier New", Courier, monospace;
+  margin: 8px;
+  font-size: 12px;
+  color: #6e6e6e;
+}
+
+.message {
+  margin: 0;
 }
