--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,14 +16,13 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 30px;
+  margin: 30px 150px;
 }
 
 .HappyThoughtsCard{
-  
   border: solid 1px rgb(114, 114, 110);
   background-color: rgb(255, 255, 255);
-  margin: 4px;
+  margin-bottom: 35px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,7 +48,7 @@ label {
   
   border: solid 1px rgb(114, 114, 110);
   background-color: rgb(199, 194, 194);
-  margin: 4px;
+  margin-bottom: 35px;
   flex-direction: column;
   box-shadow: 3px 3px 3px;
   
@@ -66,10 +65,11 @@ label {
   height: 1px; 
   width: 1px;
   overflow: hidden;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px 1px 1px 1px); 
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap; 
 }
+
 .Unliked {
 background: #ccc9c9;
 border-radius: 50%;
@@ -106,4 +106,11 @@ justify-content: space-between;
 }
 .ThoughtTxt{
   padding: 5px 15px
+}
+.FormDiv{
+  width: 100%;
+}
+.FormFooter {
+  display: flex;
+  justify-content: space-between;
 }
