--- a/code/src/components/messageList.css
+++ b/code/src/components/messageList.css
@@ -11,3 +11,15 @@
   padding: 20px;
   margin: 20px;
 }
+
+button {
+  border-radius: 50%;
+  background-color: #eaeaea;
+  border-width: 0;
+  height: 40px;
+  width: 40px;
+}
+
+h5 {
+  color:#cacaca;
+}
