--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: rgb(252, 221, 224);
+  background-color: rgb(252, 202, 210);
 }
 
 code {
@@ -22,7 +22,7 @@ code {
 .allThoughts {
   font-family: Spicy Rice;
   font-size: 45px;
-  color: white;
+  color: rgb(255, 80, 112);
   padding-top: 20px;
   width: 350px;
   display: flex;
@@ -69,7 +69,7 @@ code {
 }
 
 .sendButton {
-  background-color: rgb(255, 192, 198);
+  background-color: pink;
   border-radius: 30px;
   padding: 8px;
   font-size: 13px;
@@ -115,6 +115,8 @@ code {
   font-size: 12px;
   color: grey;
   align-items: center;
+  height: 30px;
+  margin-left: 0px;
 }
 
 .heartSection button {
@@ -122,7 +124,7 @@ code {
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  margin-right: 4px;
+  margin-right: 6px;
 }
 
 .likeButton {
