--- a/code/src/messageList.css
+++ b/code/src/messageList.css
@@ -4,6 +4,7 @@ margin:50px;
 .message {
   margin:50px;
   max-width:500px;
+  overflow-wrap:wrap ;
   margin-left:auto;
   margin-right:auto;
   height:150px;
@@ -11,3 +12,4 @@ margin:50px;
   padding:20px;
   box-shadow: 8px 9px 0px -1px rgb(39, 39, 39);
 }
+
