--- a/code/src/index.css
+++ b/code/src/index.css
@@ -14,20 +14,19 @@ code {
 .WrapperDiv {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: center;
   justify-content: center;
-  margin: 30px 150px;
+  margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .HappyThoughtsCard{
   border: solid 1px rgb(114, 114, 110);
   background-color: rgb(255, 255, 255);
   margin-bottom: 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   box-shadow: 3px 3px 3px;
+  text-align: center;
 }
 
 li {
