--- a/code/src/index.css
+++ b/code/src/index.css
@@ -104,7 +104,8 @@ justify-content: space-between;
   font-size: small;
 }
 .ThoughtTxt{
-  padding: 5px 15px
+  padding: 5px 15px;
+  font-size: 1.5em;
 }
 .FormDiv{
   width: 100%;
