--- a/code/src/App.css
+++ b/code/src/App.css
@@ -8,3 +8,15 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
+@media (min-width: 640px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width:960px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
