--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -1,23 +1,33 @@
 .input-window {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   height: fit-content;
-  width: 250px;
+  width: 300px;
+  margin: 20px;
   padding: 15px;
   background-color: lightgrey;
   font-family: 'Courier New', Courier, monospace;
   font-size: 10px;
-  box-shadow: 7px 7px black;
-  margin: 20px;
+  box-shadow: 7px 7px black; 
 }
 .form-text {
   font-family: 'Courier New', Courier, monospace;
   height: 30px;
   margin-bottom: 5px;
 }
-
 .form-button {
   font-family: 'Courier New', Courier, monospace;
-  height: 25px;
+  height: 30px;
+  width: 80%;
   background-color: salmon;
+  border: none;
+  border-radius: 15px;
+  padding: 10px;
+  font-weight: bolder;
+  
+}
+.form-button :hover {
+  cursor: pointer;
 }
