--- a/code/src/MessageList.css
+++ b/code/src/MessageList.css
@@ -1,24 +1,43 @@
 .message-box {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: fit-content;
-  width: 250px;
+  width: 300px;
   background-color: whitesmoke;
-  padding: 15px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 10px;
+  padding: 15px; 
   box-shadow: 7px 7px black;
   margin: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 12px;
 }
-.message-time {
+.message-box h3 {
+  margin: 0;
+}
+.message-footer {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-self: flex-end;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 .like-button {
-  margin: 10px 0px;
-  padding: 2px;
+  border: none;
+  border-radius: 50%;
   width: 30px;
   height: 30px;
-  border-radius: 50%;
+  margin-right: 4px;
+}
+.like-button :hover {
+  cursor: pointer;
+}
+.like-button span {
+  margin-left: 2px;
+  line-height: 2.8;
+}
+.message-time {
+  width: 100%;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 10px;
+  margin-left: 60%;
+  margin-right: 0;
 }
