--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,21 +10,21 @@ code {
     monospace;
 }
 
-/* .app {
-  width: 100%;
-} */
+.app {
+  padding: 0 20px;
+}
 
 p {
   margin: 10px 0px;
 }
+
 .thought, .input-thought {
   border: 1px solid black;
-  margin: 20px;
+  margin: 20px auto;
   padding: 10px;
   display: flex;
   flex-direction: column;
   box-shadow: 5px 5px;
-
 }
 
 .input-thought {
@@ -48,6 +48,8 @@ p {
   padding: 10px;
   margin-top: 10px;
   cursor: pointer;
+  /* border: none; */
+  /* box-shadow: none; */
 }
 
 .thought {
