--- a/code/src/MessageListStyle.css
+++ b/code/src/MessageListStyle.css
@@ -4,10 +4,23 @@
     border: 2px solid black;
     box-shadow: 4px 4px black;
     width: 300px;
-    height: 130px;
+    height: auto;
     margin: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 20px;
+    overflow-wrap: break-word;
+    display: flex;
+}
+
+.timestamp {
+    color: gray;
+    font-size: 12px;
+}
+
+.heart-and-time-container {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
 }
