--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,13 +1,10 @@
-.app {
-  width: 100%;
+.app-container {
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
+  align-items: center;
 }
 .message-input {
   display: flex;
-  align-self: center;
 }
 .message-list{
   display: flex;
