--- a/code/src/components/messageInput.css
+++ b/code/src/components/messageInput.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
   border: 1px solid black;
-  width: 50%;
+  width: 80%;
+  max-width: 400px;
   box-shadow: 5px 5px;
   padding: 20px;
   margin: 20px;
