--- a/code/src/components/messageList.css
+++ b/code/src/components/messageList.css
@@ -6,7 +6,8 @@
 
 .messages {
   border: 1px solid black;
-  width: 50%;
+  width: 80%;
+  max-width: 400px;
   box-shadow: 5px 5px;
   padding: 20px 20px 0 20px;
   margin: 20px;
