--- a/code/src/PostMessagesStyle.css
+++ b/code/src/PostMessagesStyle.css
@@ -1,10 +1,7 @@
-.input-text {
-    color: red;
 
-}
 
 .input-button {
-    background-color:pink;
+    background-color: pink;
     display: flex;
     border-radius: 20px;
     height: 40px;
@@ -19,6 +16,7 @@
 .input-box {
     border: 2px solid black;
     box-shadow: 4px 4px black;
+    background-color: rgb(241, 241, 241);
     width: 300px;
     height: auto;
     margin: 16px;
@@ -28,5 +26,9 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
-
+.letter-counting {
+    display: flex;
+    justify-content: flex-end;
+} 
