--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -14,10 +14,20 @@ $darkblue-border-color: #3cc068;
 }
 
 body {
-	background: #fff;
+	background: $pink-circle-color;
 	font-family: 'Arimo', sans-serif;
 	line-height: 1.6;
 	margin: 0;
+}
+
+h1 {
+	font-family: monospace;
+	font-size: 50px;
+	text-align: center;
+}
+
+.title-emoji {
+	font-size: 38px;
 }
 
 p {
@@ -52,8 +62,11 @@ p {
 
 .all-thoughts-container {
 	width: fit-content;
-	padding: 0 30px;
-	margin: auto;
+	padding: 20px 30px;
+	margin: 20px auto;
+	border: 1px solid #000;
+	box-shadow: 6px 6px 0px #000;
+	background-color: #ffe8e8;
 }
 
 %thoughts-shared {
@@ -121,6 +134,7 @@ form {
 	@extend %thoughts-shared;
 	justify-content: space-between;
 	height: 135px;
+	background-color: #fff;
 }
 
 .icon-container {
