Made a like button component, that works. Yay

--- a/code/src/components/ThoughtsForm.css
+++ b/code/src/components/ThoughtsForm.css
@@ -15,7 +15,7 @@
   text-align: right;
 }
 
-.happy-button {
+.submit-button {
   font-family: "Courier New", Courier, monospace;
   font-size: 14px;
   font-weight: bolder;
