--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,10 +1,6 @@
-body {
-  margin: 0px;
-  background: #fbdada;
-}
-
 .app-container {
   width: 100%;
+  background: #fbdada;
 }
 
 h2 {
@@ -21,7 +17,9 @@ p {
 /* Tablets & desktop */
 @media (min-width: 640px) {
   .app-container {
-    margin: auto;
+    border: 1px solid #000;
+    box-shadow: 6px 6px #000;
+    margin: 20px auto;
     width: 500px;
   }
 }
