--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,9 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #b3ffec;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media (min-width: 640px) {
+  body {
+    background-color: #ffe6e6;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='183' height='183' viewBox='0 0 20 20'%3E%3Cg %3E%3Cpolygon fill='%23fbfbfb' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%23fbfbfb' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E");
+  }
 }
