--- a/code/src/components/thoughtslist.css
+++ b/code/src/components/thoughtslist.css
@@ -10,6 +10,7 @@
   -webkit-box-shadow: 6px 6px #000;
   -moz-box-shadow: 6px 6px #000;
   box-shadow: 6px 6px #000;
+  background: #fff;
 }
 
 .happy-thought {
