--- a/code/src/components/pagination.css
+++ b/code/src/components/pagination.css
@@ -6,5 +6,9 @@
 
 .arrow {
   margin: 0 5px;
+  background: none;
+  border: none;
+  font-family: 'Limelight', cursive;
+  font-size: 18px;
   cursor: pointer;
 }
