--- a/code/src/components/thoughtslist.css
+++ b/code/src/components/thoughtslist.css
@@ -36,8 +36,13 @@
 
 .timestamp {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-end;
   justify-content: flex-end;
   color: #6e6e6e;
   font-size: 11px;
+}
+
+.created {
+  margin: 1px 0;
 }
