--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -85,14 +85,22 @@ label {
   font-weight: 500;
 }
 
+textarea,
+input[type=text] {
+  padding: .6rem .8rem;
+  font-family: inherit;
+  border: 1px solid $color-darkGray;
+}
+
 textarea {
   width: 100%;
   height: 60px;
   margin-top: 1rem;
-  padding: .6rem .8rem;
-  font-family: inherit;
   resize: none;
-  border: 1px solid $color-darkGray;
+}
+
+input[type=text] {
+  width: 50%;
 }
 
 .error {
@@ -100,13 +108,14 @@ textarea {
 }
 
 .char-count {
-  margin-bottom: .4rem;
   text-align: right;
   font-size: .75rem;
   color: $color-darkGray;
 }
 
 .post-btn {
+  display: block;
+  margin-top: 1.5rem;
   padding: .6rem 1rem .8rem;
   border-radius: 30px;
   background-color: $color-pink;
@@ -132,6 +141,10 @@ button:disabled {
   h2 {
     flex-basis: 100%;
     width: 100%;
+  }
+  .name {
+    flex-basis: 100%;
+    color: $color-darkGray;
   }
   .likes {
     flex: 0 1 auto;
