--- a/code/src/Components/messageinput.css
+++ b/code/src/Components/messageinput.css
@@ -38,12 +38,18 @@ form.message-input {
 
 .message-input button {
   background-color: #ffadad;
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  font-weight: 500;
+  padding: 5px 10px;
+  border-style: none;
+  border-radius: 30px;
+  font-family: inherit;
+  font-weight: 700;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+
+.message-input button:hover {
+  transform: scale(1.1);
 }
 
 @media (max-width: 380px) {
