--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -8,193 +8,278 @@ $darkred-border-color: #c03c3c;
 $darkblue-border-color: #3cc068;
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	background: $pink-circle-color;
-	font-family: 'Arimo', sans-serif;
-	line-height: 1.6;
-	margin: 0;
+  background: $pink-circle-color;
+  font-family: "Arimo", sans-serif;
+  line-height: 1.6;
+  margin: 0;
+}
+
+#root {
+  padding: 0 20px;
+  width: 100vw;
 }
 
 h1 {
-	font-family: monospace;
-	font-size: 50px;
-	text-align: center;
+  font-family: monospace;
+  font-size: 50px;
+  text-align: center;
 }
 
 .title-emoji {
-	font-size: 38px;
+  font-size: 38px;
 }
 
 p {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 %p-shared {
-	font-weight: 700;
-	font-family: 'Arimo', sans-serif;
-	font-size: 12px;
+  font-weight: 700;
+  font-family: "Arimo", sans-serif;
+  font-size: 12px;
 }
 .p-header {
-	letter-spacing: 1px;
+  letter-spacing: 1px;
 }
 .p-message-count {
-	@extend %p-shared;
+  @extend %p-shared;
 }
 .p-thoughts {
-	font-family: 'Inconsolata', monospace;
-	word-break: break-word;
+  font-family: "Inconsolata", monospace;
+  word-break: break-word;
 }
 
 .p-red {
-	@extend %p-shared;
-	color: $darkred-border-color;
+  @extend %p-shared;
+  color: $darkred-border-color;
 }
 
 .p-blue {
-	@extend %p-shared;
-	color: $darkblue-border-color;
+  @extend %p-shared;
+  color: $darkblue-border-color;
 }
 
 .all-thoughts-container {
-	width: fit-content;
-	padding: 20px 30px;
-	margin: 20px auto;
-	border: 1px solid #000;
-	box-shadow: 6px 6px 0px #000;
-	background-color: #ffe8e8;
+  max-width: 484px;
+  margin: 20px auto;
+  padding-bottom: 15px;
+  border: 1px solid #000;
+  box-shadow: 6px 6px 0px #000;
+  background-color: #ffe8e8;
 }
 
 %thoughts-shared {
-	display: flex;
-	flex-direction: column;
-	width: 400px;
+  display: flex;
+  flex-direction: column;
+  // width: 400px;
 
-	margin: 20px auto;
-	padding: 10px;
+  margin: 20px;
+  padding: 10px;
 
-	border: 1px solid #000;
-	box-shadow: 6px 6px 0px #000;
+  border: 1px solid #000;
+  box-shadow: 6px 6px 0px #000;
 }
 
 %buttons-shared {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
 
-	border: none;
+  border: none;
 
-	cursor: pointer;
+  cursor: pointer;
+}
+
+.pages-back-forth {
+  text-align: center;
+  margin: 0 0 -10px;
+}
+
+.pages-back-forth-btn {
+  font-size: 20px;
+  margin: 0 10px;
+
+  background: none;
+  border: none;
 }
 
 .send-thought-container {
-	@extend %thoughts-shared;
-	justify-content: space-around;
-	height: 165px;
-	background-color: $lightgrey-background-color;
+  @extend %thoughts-shared;
+  justify-content: space-around;
+  margin: 15px 20px;
+  background-color: $lightgrey-background-color;
 }
 
 .btn-and-count-container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 form {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
 }
 
-.thought-input {
-	height: 65px;
-	border: 1px solid rgba(0, 0, 0, 0.534);
-	padding: 5px;
-	font-family: monospace;
-	font-size: 13px;
-	resize: none;
-	margin: 5px 0 10px;
+%thought-input {
+  border: 1px solid rgba(0, 0, 0, 0.534);
+  padding: 5px;
+  font-family: monospace;
+  font-size: 13px;
+  resize: none;
+  margin: 5px 0 10px;
+}
+.thought-input-name {
+  @extend %thought-input;
+  height: 35px;
+  width: 100%;
+}
+
+.thought-input-text {
+  @extend %thought-input;
+  height: 65px;
 }
 
 .two-hearts-button {
-	@extend %buttons-shared;
-	border-radius: 30px;
-	width: 190px;
-	font-size: 14px;
-	background-color: $pink-circle-color;
+  @extend %buttons-shared;
+  border-radius: 30px;
+  width: 190px;
+  font-size: 14px;
+  background-color: $pink-circle-color;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .thought-container {
-	@extend %thoughts-shared;
-	justify-content: space-between;
-	height: 135px;
-	background-color: #fff;
+  @extend %thoughts-shared;
+  justify-content: space-between;
+  height: 135px;
+  background-color: #fff;
 }
 
 .icon-container {
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 
-	.heart-container {
-		display: flex;
-		align-items: center;
-		flex-direction: row;
-	}
+  .heart-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 .heart-button-no-like {
-	@extend %buttons-shared;
-	border-radius: 50%;
-	width: 40px;
-	background-color: $grey-circle-color;
+  @extend %buttons-shared;
+  border-radius: 50%;
+  width: 40px;
+  background-color: $grey-circle-color;
 }
 
 .heart-button-like {
-	@extend %buttons-shared;
-	border-radius: 50%;
-	width: 40px;
-	background-color: $pink-circle-color;
+  @extend %buttons-shared;
+  border-radius: 50%;
+  width: 40px;
+  background-color: $pink-circle-color;
 }
 
 .heart-button-no-like:hover {
-	background-color: $darkgrey-circle-color;
+  background-color: $darkgrey-circle-color;
 }
 
 .heart-button-like:hover,
 .two-hearts-button:hover {
-	background-color: $darkpink-circle-color;
+  background-color: $darkpink-circle-color;
 }
 
 .all-likes {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin-left: 5px;
-	font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 5px;
+  font-size: 12px;
 }
 
 .your-likes {
-	opacity: 0.5;
-	line-height: 5px;
+  opacity: 0.5;
+  line-height: 5px;
 }
 
 .amount-of-hearts {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 .heart {
-	margin-left: 4px;
-	font-size: 16px;
+  margin-left: 1px;
+  margin-top: 1px;
+  font-size: 22px;
 }
 
 .time-gone-by {
-	opacity: 0.3;
-	font-size: 12px;
+  opacity: 0.3;
+  font-size: 12px;
+}
+
+.wrapper-col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.wrapper-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.wraper-optional {
+  display: flex;
+  flex-direction: column;
+}
+
+.spinning-loader {
+  border: 26px solid #ffc0cb;
+  border-top: 26px solid #fe0000;
+  border-radius: 50%;
+
+  margin: 40px auto;
+
+  width: 100px;
+  height: 100px;
+
+  animation: spin 1.9s linear infinite;
+}
+
+.selector {
+  border: 1px solid rgba(0, 0, 0, 0.534);
+  color: #00000080;
+  padding: 5px;
+  height: 35px;
+  font-family: monospace;
+  font-size: 13px;
+  text-align: center;
+  margin: 5px 0 10px;
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
