--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -233,14 +233,15 @@ form {
 
 .selector {
   border: 1px solid rgba(0, 0, 0, 0.534);
+  background: #fff;
   color: #00000080;
-  padding: 5px;
-  height: 35px;
   font-family: monospace;
   font-size: 13px;
   text-align: center;
-  margin: 5px 0 10px;
+  height: 35px;
   width: 100%;
+  padding: 5px;
+  margin: 5px 0 10px;
   appearance: none;
   border-radius: 0;
 }
