--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -62,7 +62,7 @@ p {
   background-color: #ffe8e8;
 }
 
-.send-thought-container, .thought-container {
+.send-thought-container, .sort-container, .thought-container {
   display: flex;
   flex-direction: column;
   margin: 20px;
@@ -96,6 +96,20 @@ p {
   justify-content: space-around;
   margin: 15px 20px;
   background-color: #f2f0f0;
+}
+
+.sort-container {
+  height: 63px;
+  background-color: #f2f0f0;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.p-sort {
+  font-size: 18px;
 }
 
 .btn-and-count-container {
@@ -231,7 +245,7 @@ form {
   animation: spin 1.9s linear infinite;
 }
 
-.selector {
+.selector, .selector-sort {
   border: 1px solid rgba(0, 0, 0, 0.534);
   background: #fff;
   color: #00000080;
@@ -239,11 +253,14 @@ form {
   font-size: 13px;
   text-align: center;
   height: 35px;
-  width: 100%;
   padding: 5px;
   margin: 5px 0 10px;
   appearance: none;
   border-radius: 0;
+}
+
+.selector {
+  width: 100%;
 }
 
 @keyframes spin {
