styling for mobile

--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -132,6 +132,8 @@ form {
   font-size: 13px;
   resize: none;
   margin: 5px 0 10px;
+  appearance: none;
+  border-radius: 0;
 }
 
 .thought-input-name {
