--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -153,6 +153,13 @@ form {
   font-size: 13px;
   resize: none;
   margin: 5px 0 10px;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
 }
 .thought-input-name {
   @extend %thought-input;
