--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -269,7 +269,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 50%;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .wrapper-optional-left {
