--- a/code/src/css/style.css
+++ b/code/src/css/style.css
@@ -236,7 +236,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 50%;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .wrapper-optional-left {
