--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -83,7 +83,9 @@ button {
   flex: 0 1 auto;
 }
 
-label {
+h1 {
+  margin-top: 0;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -118,28 +120,34 @@ input[type=text] {
 .post-btn {
   display: block;
   margin-top: 1.5rem;
-  padding: .6rem 1rem .8rem;
+  padding: .8rem 1.5rem .9rem;
   border-radius: 30px;
   background-color: $color-pink;
   font-family: inherit;
   font-size: inherit;
   font-weight: 500;
   border: 0;
-}
+  transition: all .15s ease-in-out;
 
-button:disabled {
-  color: inherit;
-  opacity: .5;
-  cursor: default;
+  &:hover:not(:disabled) { // Hover only if button is not disabled
+    background-color: darken($color-pink, 5%);
+  }
+
+  &:disabled {
+    color: inherit;
+    opacity: .5;
+    cursor: default;
+  }
 }
 
 
 /* –– Sorting –– */
 
 .sorting-container {
-  padding-bottom: .5rem;
+  padding-top: 1rem;
 
   p {
+    margin: 0;
     text-transform: uppercase;
   }
 
@@ -168,7 +176,11 @@ button:disabled {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
+
+  @media (max-width: 575px) {
+    justify-content: space-between;
+  }
 
   button {
     border: 0;
@@ -177,8 +189,13 @@ button:disabled {
     color: #fff;
     font-weight: 900;
 
+    &:hover:not(:disabled) {
+      color: $color-pink;
+    }
+
     &:disabled {
-      background-color: $color-darkGray;
+      background-color: lighten($color-darkGray, 20%);
+      cursor: default;
     }
   }
 
@@ -197,7 +214,7 @@ button:disabled {
   overflow-wrap: break-word;
 
   &:first-child {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
   }
 
   h2 {
@@ -220,16 +237,20 @@ button:disabled {
 }
 
 .like-btn {
-  width: 3.5rem;
-  height: 3.5rem;
-  margin-left: -.3rem;
+  width: 3.2rem;
+  height: 3.2rem;
   margin-right: 1rem;
-  padding-top: .5rem;
-  font-size: 1.6rem;
+  padding-top: .2rem;
+  font-size: 1.3rem;
   background-color: $color-lightGray;
+  color: darken($color-pink, 20%);
   border: 0;
   border-radius: 50%;
-  transform: scale(.8); // Fix to make the emoji centered in Chrome (increase font-size & reduce total size)
+  transition: all .15s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .has-likes {
