--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -91,9 +91,20 @@ h1 {
 
 textarea,
 input[type=text] {
-  padding: .6rem .8rem;
+  padding: .8rem;
+  font-size: .75rem;
   font-family: inherit;
-  border: 1px solid $color-darkGray;
+  border: none;
+  border-left: 5px solid $color-pink;
+
+  &:placeholder-shown {
+    border-left: 5px solid #fff;
+  }
+
+  &:focus {
+    outline: none;
+    border-left: 5px solid $color-pink;
+  }
 }
 
 textarea {
