--- a/code/src/messagepost.css
+++ b/code/src/messagepost.css
@@ -7,7 +7,6 @@
     background-color: #ffadad;
     border-radius: 500px;
     padding: 8px 20px;
-    margin-top: 10px;
     display: block;
     cursor: pointer;
 }
@@ -34,4 +33,15 @@ word-break: break-all;
 .character-count {
     font-size: 13px;
     margin: 5px 0 0 0;
+}
+
+.count-and-input-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.signature-input {
+    padding: 5px;
+    font-size: 18x;
 }
