--- a/code/src/components/comments.css
+++ b/code/src/components/comments.css
@@ -1,6 +1,10 @@
+.comments-container {
+  background: #f2f0f0;
+  padding: 5px;
+}
+
 .comments-title {
   margin-top: 0;
-  padding-top: 10px;
   font-size: 12px;
   font-weight: normal;
 }
@@ -27,4 +31,32 @@
 .comments-form {
   display: flex;
   flex-direction: column;
+}
+
+.comment-text {
+  margin-bottom: 5px;
+  padding: 4px;
+  border-radius: 3px;
+  border: none;
+  font-family: 'Inconsolata', monospace;
+  font-size: 10px;
+}
+
+.comment-button {
+  display:inline-block;
+  padding: 9px 50px;
+  border: none;
+	border-radius: 3px;
+  background-color:#ffe6e6;
+  font-size: 10px;
+  text-decoration:none;
+  cursor:pointer;
+}
+
+.comment-button:hover {
+	background-color:#ffadad;
+}
+.comment-button:active {
+	position:relative;
+	top:1px;
 }
