Added favicon & fixed issue w/ like btn centering

--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -251,7 +251,7 @@ input[type=text] {
   width: 3.2rem;
   height: 3.2rem;
   margin-right: 1rem;
-  padding-top: .2rem;
+  padding: .2rem 0;
   font-size: 1.3rem;
   background-color: $color-lightGray;
   color: darken($color-pink, 20%);
